--- a/pom.xml
+++ b/pom.xml
@@ -191,5 +191,16 @@
             <scope>runtime</scope>
         </dependency>
 
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.opensaga</groupId>
+            <artifactId>opensaga-dynamic-stylesheets</artifactId>
+            <version>2.0.3</version>
+        </dependency>
     </dependencies>
 </project>
