--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
     <servlet>
+        <servlet-name>DSSServlet</servlet-name>
+        <servlet-class>de.quinscape.dss.runtime.DynamicStylesheetsServlet</servlet-class>
+        <!-- Init parameters. Commented out parameters are the default parameter. Uncomment to set different values -->
+        <init-param>
+            <!-- dssRootURI Sets the root URI from which the servlet will load the .DSS files and resources -->
+            <param-name>dssRootURI</param-name>
+            <param-value>/</param-value>
+        </init-param>
+        <init-param>
+            <!-- stripParts Sets the number of parts that are stripped from the incoming URI. Depends on your context path 
+                and servlet mapping. -->
+            <param-name>stripParts</param-name>
+            <param-value>2</param-value>
+        </init-param>
+        <init-param>
+            <param-name>production</param-name>
+            <param-value>false</param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+
+    <!-- Maps the DSS Servlet to the default URI of /dss/. If you use the Spring controller, you can remove the servlet and 
+        this mapping. -->
+    <servlet-mapping>
+        <servlet-name>DSSServlet</servlet-name>
+        <url-pattern>/dss/*</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
         <servlet-name>dispatcher</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
