--- a/pom.xml
+++ b/pom.xml
@@ -18,28 +18,12 @@
         </repository>
 
         <repository>
-            <id>googlecode</id>
-            <name>jWebSocket Repository</name>
-            <url>http://jwebsocket.googlecode.com/svn/repo</url>
-        </repository>
-        <repository>
             <id>jboss</id>
             <name>JBoss Repository</name>
             <url>http://repository.jboss.org/</url>
         </repository>
     </repositories>
     <dependencies>
-        <dependency>
-            <groupId>org.jwebsocket</groupId>
-            <artifactId>jWebSocketServerAPI</artifactId>
-            <version>0.10</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jwebsocket</groupId>
-            <artifactId>jWebSocketServer</artifactId>
-            <version>0.10</version>
-        </dependency>
-
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
@@ -94,6 +78,48 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-tx</artifactId>
+            <version>3.0.5.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>3.0.5.RELEASE</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>commons-logging</groupId>
+                    <artifactId>commons-logging-api</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>commons-logging</groupId>
+                    <artifactId>commons-logging</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.aspectj</groupId>
+                    <artifactId>aspectjrt</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.aspectj</groupId>
+                    <artifactId>aspectjweaver</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>3.0.5.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>3.0.5.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-openid</artifactId>
             <version>3.0.5.RELEASE</version>
         </dependency>
 
@@ -202,5 +228,13 @@
             <artifactId>opensaga-dynamic-stylesheets</artifactId>
             <version>2.0.3</version>
         </dependency>
+        
+        <dependency>
+            <groupId>org.webbitserver</groupId>
+            <artifactId>webbit</artifactId>
+            <version>0.4.6</version>
+        </dependency>
     </dependencies>
+
+
 </project>
