--- a/pom.xml
+++ b/pom.xml
@@ -198,12 +198,13 @@
             <artifactId>jpa-api</artifactId>
             <version>2.0-cr-1</version>
         </dependency>
+
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
-            <version>3.6.10.Final</version>
+            <version>3.5.6-Final</version>
         </dependency>
-
+            
         <dependency>
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
@@ -233,6 +234,11 @@
             <groupId>org.webbitserver</groupId>
             <artifactId>webbit</artifactId>
             <version>0.4.6</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.svenson</groupId>
+            <artifactId>svenson</artifactId>
+            <version>1.4.0</version>
         </dependency>
     </dependencies>
 
